# LearnNativeTest

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/learn/nativetest/: ExampleInstrumentedTest.java
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/botan/: CMakeLists.txt  ReadMe.txt  botan_all.h
app/src/main/cpp/botan/include/botan/: build.h
app/src/main/java/com/learn/nativetest/: MainActivity.java
app/src/test/java/com/learn/nativetest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
